--- a/role_lora_pipeline.ipynb
+++ b/role_lora_pipeline.ipynb
@@ -101,11 +101,12 @@
     "lora_config = LoraConfig(\n",
     "    r=16,\n",
     "    lora_alpha=32,\n",
-    "    target_modules=[\"attn.attention\", \"attn.output\"],\n",
+    "    target_modules=[\"q_proj\",\"k_proj\",\"v_proj\",\"out_proj\"],\n",
     "    lora_dropout=0.05,\n",
     "    bias=\"none\",\n",
-    "    task_type=\"CAUSAL_LM\"\n",
+    "    task_type=\"CAUSAL_LM\",\n",
     ")\n",
+    "\n",
     "\n",
     "model = get_peft_model(model, lora_config)"
    ]
