added configs wandb

--- a/role_lora_pipeline.ipynb
+++ b/role_lora_pipeline.ipynb
@@ -4,28 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/edris6/rola_rola_pipeline/blob/main/role_lora_pipeline.ipynb)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "install_packages"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install -q transformers datasets peft accelerate bitsandbytes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "instructions"
-   },
-   "source": [
-    "# Instructions\n",
-    "Open this notebook in Colab, then click **Runtime ▸ Run all**."
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/your_repo/role_lora_training.ipynb)\n",
+    "\n",
+    "# Role-LoRA Fine-Tuning Notebook\n",
+    "This notebook fine-tunes GPT-Neo-125M with LoRA.  \n",
+    "*If a file named `wandb_key.txt` (containing only your Weights & Biases API key) is present, logging will be enabled.  Otherwise W&B is disabled automatically.*"
    ]
   },
   {
@@ -34,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_MODEL = \"EleutherAI/gpt-neo-125M\"  # ~500 MB"
+    "# --- Install dependencies ---\n",
+    "!pip install -q transformers datasets peft accelerate bitsandbytes wandb"
    ]
   },
   {
@@ -43,21 +27,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --- W&B auto-setup ---\n",
+    "import os\n",
+    "wandb_key_file = 'wandb_key.txt'\n",
+    "if os.path.isfile(wandb_key_file):\n",
+    "    with open(wandb_key_file) as f:\n",
+    "        key = f.read().strip()\n",
+    "    if key:\n",
+    "        import wandb\n",
+    "        wandb.login(key=key)\n",
+    "        print('Weights & Biases logging ENABLED')\n",
+    "    else:\n",
+    "        os.environ['WANDB_DISABLED'] = 'true'\n",
+    "        print('wandb_key.txt is empty – W&B disabled.')\n",
+    "else:\n",
+    "    os.environ['WANDB_DISABLED'] = 'true'\n",
+    "    print('No wandb_key.txt – W&B disabled.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE_MODEL = \"EleutherAI/gpt-neo-125M\"   # ~500 MB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Build tiny toy dataset ---\n",
     "from datasets import Dataset\n",
     "\n",
     "examples = [\n",
-    "    {\n",
-    "        \"role\": \"Detective\",\n",
-    "        \"text\": \"Role: Detective\\nUser: Describe a crime scene.\\nAssistant: The alley smelled of rust and secrets, every shadow a possible clue.\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"role\": \"Poet\",\n",
-    "        \"text\": \"Role: Poet\\nUser: Write about the sunrise.\\nAssistant: Dawn spills saffron light across the quiet roofs of the city.\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"role\": \"Comedian\",\n",
-    "        \"text\": \"Role: Comedian\\nUser: Tell a joke about cats.\\nAssistant: Why did the cat join Instagram? To get more pawsitive feedback!\"\n",
-    "    }\n",
+    "    {\"role\": \"Detective\", \"text\": \"Role: Detective\\nUser: Describe a crime scene.\\nAssistant: The alley smelled of rust and secrets, every shadow a possible clue.\"},\n",
+    "    {\"role\": \"Poet\", \"text\": \"Role: Poet\\nUser: Write about the sunrise.\\nAssistant: Dawn spills saffron light across the quiet roofs of the city.\"},\n",
+    "    {\"role\": \"Comedian\", \"text\": \"Role: Comedian\\nUser: Tell a joke about cats.\\nAssistant: Why did the cat join Instagram? To get more pawsitive feedback!\"}\n",
     "]\n",
     "dataset = Dataset.from_list(examples)"
    ]
@@ -68,8 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --- Tokenize ---\n",
     "from transformers import AutoTokenizer\n",
-    "\n",
     "tokenizer = AutoTokenizer.from_pretrained(BASE_MODEL)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "\n",
@@ -85,28 +94,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import AutoModelForCausalLM, BitsAndBytesConfig\n",
+    "# --- Load base model + LoRA ---\n",
+    "from transformers import AutoModelForCausalLM\n",
     "from peft import LoraConfig, get_peft_model\n",
-    "\n",
-    "# new quantization config instead of deprecated load_in_8bit\n",
-    "bnb_config = BitsAndBytesConfig(load_in_8bit=True)\n",
     "\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "    BASE_MODEL,\n",
-    "    quantization_config=bnb_config,\n",
+    "    load_in_8bit=True,\n",
     "    device_map=\"auto\"\n",
     ")\n",
     "\n",
-    "# GPT-Neo attention modules to target for LoRA\n",
     "lora_config = LoraConfig(\n",
     "    r=16,\n",
     "    lora_alpha=32,\n",
-    "    target_modules=[\"q_proj\",\"k_proj\",\"v_proj\",\"out_proj\"],\n",
+    "    target_modules=[\"c_attn\"],  # correct module for GPT-Neo\n",
     "    lora_dropout=0.05,\n",
     "    bias=\"none\",\n",
-    "    task_type=\"CAUSAL_LM\",\n",
+    "    task_type=\"CAUSAL_LM\"\n",
     ")\n",
-    "\n",
     "\n",
     "model = get_peft_model(model, lora_config)"
    ]
@@ -117,6 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --- Training ---\n",
     "from transformers import TrainingArguments, Trainer\n",
     "\n",
     "training_args = TrainingArguments(\n",
@@ -135,6 +141,7 @@
     "    args=training_args,\n",
     "    train_dataset=tokenized\n",
     ")\n",
+    "\n",
     "trainer.train()"
    ]
   },
@@ -144,6 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --- Save LoRA adapter ---\n",
     "model.save_pretrained(\"role-lora/adapter\")\n",
     "tokenizer.save_pretrained(\"role-lora/adapter\")"
    ]
@@ -154,8 +162,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# --- Inference helper ---\n",
     "from peft import PeftModel\n",
-    "from transformers import AutoModelForCausalLM\n",
     "\n",
     "base = AutoModelForCausalLM.from_pretrained(BASE_MODEL, device_map=\"auto\")\n",
     "lora = PeftModel.from_pretrained(base, \"role-lora/adapter\")\n",
@@ -185,9 +193,9 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.10"
+   "version": "3.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
