--- a/role_lora_pipeline.ipynb
+++ b/role_lora_pipeline.ipynb
@@ -8,14 +8,12 @@
     "\n",
     "# Role-LoRA Fine-Tuning Notebook\n",
     "This notebook fine-tunes GPT-Neo-125M with LoRA.  \n",
-    "*If a file named `wandb_key.txt` (containing only your Weights & Biases API key) is present, logging will be enabled.  Otherwise W&B is disabled automatically.*"
+    "*If a file named `wandb_key.txt` (containing only your Weights & Biases API key) is present, logging will be enabled. Otherwise W&B is disabled automatically.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# --- Install dependencies ---\n",
     "!pip install -q transformers datasets peft accelerate bitsandbytes wandb"
@@ -23,9 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# --- W&B auto-setup ---\n",
     "import os\n",
@@ -47,18 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "BASE_MODEL = \"EleutherAI/gpt-neo-125M\"   # ~500 MB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# --- Build tiny toy dataset ---\n",
     "from datasets import Dataset\n",
@@ -73,9 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# --- Tokenize ---\n",
     "from transformers import AutoTokenizer\n",
@@ -90,24 +80,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# --- Load base model + LoRA ---\n",
-    "from transformers import AutoModelForCausalLM\n",
+    "# --- Load base model + LoRA (fixed) ---\n",
+    "from transformers import AutoModelForCausalLM, BitsAndBytesConfig\n",
     "from peft import LoraConfig, get_peft_model\n",
+    "\n",
+    "bnb_config = BitsAndBytesConfig(load_in_8bit=True)\n",
     "\n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
     "    BASE_MODEL,\n",
-    "    load_in_8bit=True,\n",
+    "    quantization_config=bnb_config,\n",
     "    device_map=\"auto\"\n",
     ")\n",
     "\n",
     "lora_config = LoraConfig(\n",
     "    r=16,\n",
     "    lora_alpha=32,\n",
-    "    target_modules=[\"c_attn\"],  # correct module for GPT-Neo\n",
+    "    target_modules=[\"attn\"],  # correct for GPT-Neo\n",
     "    lora_dropout=0.05,\n",
     "    bias=\"none\",\n",
     "    task_type=\"CAUSAL_LM\"\n",
@@ -118,9 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# --- Training ---\n",
     "from transformers import TrainingArguments, Trainer\n",
@@ -147,9 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# --- Save LoRA adapter ---\n",
     "model.save_pretrained(\"role-lora/adapter\")\n",
@@ -158,9 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# --- Inference helper ---\n",
     "from peft import PeftModel\n",
@@ -193,7 +177,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9"
+   "version": "3.12"
   }
  },
  "nbformat": 4,
