--- a/role_lora_pipeline.ipynb
+++ b/role_lora_pipeline.ipynb
@@ -9,7 +9,8 @@
     "# Role-LoRA Fine-Tuning Notebook\n",
     "This notebook fine-tunes GPT-Neo-125M with LoRA.  \n",
     "*If a file named `wandb_key.txt` (containing only your Weights & Biases API key) is present, logging will be enabled. Otherwise W&B is disabled automatically.*"
-   ]
+   ],
+   "id": "dfc83b00-570f-4698-886a-ca148e41e688"
   },
   {
    "cell_type": "code",
@@ -17,7 +18,10 @@
    "source": [
     "# --- Install dependencies ---\n",
     "!pip install -q transformers datasets peft accelerate bitsandbytes wandb"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null,
+   "id": "a5664e2d-57ef-4c38-9383-cc1ff1f791a2"
   },
   {
    "cell_type": "code",
@@ -35,18 +39,24 @@
     "        print('Weights & Biases logging ENABLED')\n",
     "    else:\n",
     "        os.environ['WANDB_DISABLED'] = 'true'\n",
-    "        print('wandb_key.txt is empty – W&B disabled.')\n",
+    "        print('wandb_key.txt is empty \u2013 W&B disabled.')\n",
     "else:\n",
     "    os.environ['WANDB_DISABLED'] = 'true'\n",
-    "    print('No wandb_key.txt – W&B disabled.')"
-   ]
+    "    print('No wandb_key.txt \u2013 W&B disabled.')"
+   ],
+   "outputs": [],
+   "execution_count": null,
+   "id": "6c9f63ba-215b-4ee5-a0d5-2d2012c7553d"
   },
   {
    "cell_type": "code",
    "metadata": {},
    "source": [
     "BASE_MODEL = \"EleutherAI/gpt-neo-125M\"   # ~500 MB"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null,
+   "id": "f3eb09b3-b3ca-4aef-ac27-a0c4e6cef4e6"
   },
   {
    "cell_type": "code",
@@ -61,7 +71,10 @@
     "    {\"role\": \"Comedian\", \"text\": \"Role: Comedian\\nUser: Tell a joke about cats.\\nAssistant: Why did the cat join Instagram? To get more pawsitive feedback!\"}\n",
     "]\n",
     "dataset = Dataset.from_list(examples)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null,
+   "id": "868a3493-545e-43c9-a090-5b3f5f070333"
   },
   {
    "cell_type": "code",
@@ -76,7 +89,10 @@
     "    return tokenizer(example[\"text\"], truncation=True, max_length=512)\n",
     "\n",
     "tokenized = dataset.map(tokenize_fn)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null,
+   "id": "f78e5cfd-e0a3-4d39-b64f-a2825313ce6f"
   },
   {
    "cell_type": "code",
@@ -104,7 +120,10 @@
     ")\n",
     "\n",
     "model = get_peft_model(model, lora_config)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null,
+   "id": "5b0b3eed-cab0-4cb1-9b99-9e4051b2ff42"
   },
   {
    "cell_type": "code",
@@ -131,7 +150,10 @@
     ")\n",
     "\n",
     "trainer.train()"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null,
+   "id": "690c405d-4336-43e5-a8c6-65fe092c688e"
   },
   {
    "cell_type": "code",
@@ -140,7 +162,10 @@
     "# --- Save LoRA adapter ---\n",
     "model.save_pretrained(\"role-lora/adapter\")\n",
     "tokenizer.save_pretrained(\"role-lora/adapter\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null,
+   "id": "ca08df46-6cc7-479c-845b-5090068b1f7f"
   },
   {
    "cell_type": "code",
@@ -166,7 +191,10 @@
     "\n",
     "generate(\"Poet\", \"Write about an autumn forest.\")\n",
     "generate(\"Detective\", \"Describe a mysterious stranger.\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null,
+   "id": "0cd7323f-5674-48c6-9483-8bfab0a87671"
   }
  ],
  "metadata": {
