--- a/role_lora_pipeline.ipynb
+++ b/role_lora_pipeline.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "dfc83b00-570f-4698-886a-ca148e41e688",
    "metadata": {},
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/your_repo/role_lora_training.ipynb)\n",
@@ -9,23 +10,25 @@
     "# Role-LoRA Fine-Tuning Notebook\n",
     "This notebook fine-tunes GPT-Neo-125M with LoRA.  \n",
     "*If a file named `wandb_key.txt` (containing only your Weights & Biases API key) is present, logging will be enabled. Otherwise W&B is disabled automatically.*"
-   ],
-   "id": "dfc83b00-570f-4698-886a-ca148e41e688"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a5664e2d-57ef-4c38-9383-cc1ff1f791a2",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# --- Install dependencies ---\n",
     "!pip install -q transformers datasets peft accelerate bitsandbytes wandb"
-   ],
-   "outputs": [],
-   "execution_count": null,
-   "id": "a5664e2d-57ef-4c38-9383-cc1ff1f791a2"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6c9f63ba-215b-4ee5-a0d5-2d2012c7553d",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# --- W&B auto-setup ---\n",
     "import os\n",
@@ -39,28 +42,28 @@
     "        print('Weights & Biases logging ENABLED')\n",
     "    else:\n",
     "        os.environ['WANDB_DISABLED'] = 'true'\n",
-    "        print('wandb_key.txt is empty \u2013 W&B disabled.')\n",
+    "        print('wandb_key.txt is empty – W&B disabled.')\n",
     "else:\n",
     "    os.environ['WANDB_DISABLED'] = 'true'\n",
-    "    print('No wandb_key.txt \u2013 W&B disabled.')"
-   ],
-   "outputs": [],
-   "execution_count": null,
-   "id": "6c9f63ba-215b-4ee5-a0d5-2d2012c7553d"
+    "    print('No wandb_key.txt – W&B disabled.')"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f3eb09b3-b3ca-4aef-ac27-a0c4e6cef4e6",
    "metadata": {},
+   "outputs": [],
    "source": [
     "BASE_MODEL = \"EleutherAI/gpt-neo-125M\"   # ~500 MB"
-   ],
-   "outputs": [],
-   "execution_count": null,
-   "id": "f3eb09b3-b3ca-4aef-ac27-a0c4e6cef4e6"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "868a3493-545e-43c9-a090-5b3f5f070333",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# --- Build tiny toy dataset ---\n",
     "from datasets import Dataset\n",
@@ -71,14 +74,14 @@
     "    {\"role\": \"Comedian\", \"text\": \"Role: Comedian\\nUser: Tell a joke about cats.\\nAssistant: Why did the cat join Instagram? To get more pawsitive feedback!\"}\n",
     "]\n",
     "dataset = Dataset.from_list(examples)"
-   ],
-   "outputs": [],
-   "execution_count": null,
-   "id": "868a3493-545e-43c9-a090-5b3f5f070333"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f78e5cfd-e0a3-4d39-b64f-a2825313ce6f",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# --- Tokenize ---\n",
     "from transformers import AutoTokenizer\n",
@@ -89,16 +92,15 @@
     "    return tokenizer(example[\"text\"], truncation=True, max_length=512)\n",
     "\n",
     "tokenized = dataset.map(tokenize_fn)"
-   ],
-   "outputs": [],
-   "execution_count": null,
-   "id": "f78e5cfd-e0a3-4d39-b64f-a2825313ce6f"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5b0b3eed-cab0-4cb1-9b99-9e4051b2ff42",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# --- Load base model + LoRA (fixed) ---\n",
     "from transformers import AutoModelForCausalLM, BitsAndBytesConfig\n",
     "from peft import LoraConfig, get_peft_model\n",
     "\n",
@@ -113,21 +115,21 @@
     "lora_config = LoraConfig(\n",
     "    r=16,\n",
     "    lora_alpha=32,\n",
-    "    target_modules=[\"attn\"],  # correct for GPT-Neo\n",
+    "    target_modules=[\"q_proj\", \"k_proj\", \"v_proj\", \"out_proj\"],  # correct modules for GPT-Neo\n",
     "    lora_dropout=0.05,\n",
     "    bias=\"none\",\n",
     "    task_type=\"CAUSAL_LM\"\n",
     ")\n",
     "\n",
-    "model = get_peft_model(model, lora_config)"
-   ],
-   "outputs": [],
-   "execution_count": null,
-   "id": "5b0b3eed-cab0-4cb1-9b99-9e4051b2ff42"
+    "model = get_peft_model(model, lora_config)\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "690c405d-4336-43e5-a8c6-65fe092c688e",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# --- Training ---\n",
     "from transformers import TrainingArguments, Trainer\n",
@@ -150,26 +152,26 @@
     ")\n",
     "\n",
     "trainer.train()"
-   ],
-   "outputs": [],
-   "execution_count": null,
-   "id": "690c405d-4336-43e5-a8c6-65fe092c688e"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ca08df46-6cc7-479c-845b-5090068b1f7f",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# --- Save LoRA adapter ---\n",
     "model.save_pretrained(\"role-lora/adapter\")\n",
     "tokenizer.save_pretrained(\"role-lora/adapter\")"
-   ],
-   "outputs": [],
-   "execution_count": null,
-   "id": "ca08df46-6cc7-479c-845b-5090068b1f7f"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0cd7323f-5674-48c6-9483-8bfab0a87671",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# --- Inference helper ---\n",
     "from peft import PeftModel\n",
@@ -191,10 +193,7 @@
     "\n",
     "generate(\"Poet\", \"Write about an autumn forest.\")\n",
     "generate(\"Detective\", \"Describe a mysterious stranger.\")"
-   ],
-   "outputs": [],
-   "execution_count": null,
-   "id": "0cd7323f-5674-48c6-9483-8bfab0a87671"
+   ]
   }
  ],
  "metadata": {
