--- a/role_lora_pipeline.ipynb
+++ b/role_lora_pipeline.ipynb
@@ -121,7 +121,8 @@
     "    task_type=\"CAUSAL_LM\"\n",
     ")\n",
     "\n",
-    "model = get_peft_model(model, lora_config)\n"
+    "model = get_peft_model(model, lora_config)\n",
+    "    "
    ]
   },
   {
