--- a/role_lora_pipeline.ipynb
+++ b/role_lora_pipeline.ipynb
@@ -1,95 +1,73 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "8bd6d317",
-   "metadata": {},
-   "source": [
-    "# Role LoRA Fine-Tuning Notebook\n",
-    "This notebook loads a base GPT-Neo model, applies LoRA adapters, tokenizes your dataset, and trains with the HuggingFace Trainer API."
-   ]
-  },
-  {
    "cell_type": "code",
-   "id": "c53fdb36",
+   "execution_count": null,
+   "id": "install-deps",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Install dependencies ---\n",
-    "!pip install -q transformers datasets peft bitsandbytes"
+    "!pip install -q transformers datasets peft bitsandbytes accelerate"
    ]
   },
   {
    "cell_type": "code",
-   "id": "bf71e1d1",
+   "execution_count": null,
+   "id": "imports",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Imports ---\n",
-    "import torch\n",
-    "from transformers import AutoTokenizer, AutoModelForCausalLM, Trainer, TrainingArguments, DataCollatorForSeq2Seq\n",
-    "from peft import LoraConfig, get_peft_model, prepare_model_for_int8_training, TaskType\n",
-    "from datasets import load_dataset"
+    "from transformers import AutoModelForCausalLM, AutoTokenizer, TrainingArguments, Trainer\n",
+    "from peft import LoraConfig, get_peft_model\n",
+    "from datasets import load_dataset\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "id": "82218482",
+   "execution_count": null,
+   "id": "load-model",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Load base model ---\n",
+    "BASE_MODEL = 'EleutherAI/gpt-neo-125M'\n",
+    "tokenizer = AutoTokenizer.from_pretrained(BASE_MODEL)\n",
+    "model = AutoModelForCausalLM.from_pretrained(BASE_MODEL, device_map='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "load-dataset",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Load dataset ---\n",
-    "dataset = load_dataset('json', data_files={'train': 'train.json'})['train']\n",
-    "texts = dataset['text']"
+    "dataset = load_dataset('wikitext', 'wikitext-2-raw-v1', split='train[:1%]')  # small subset for testing"
    ]
   },
   {
    "cell_type": "code",
-   "id": "82b9cc30",
+   "execution_count": null,
+   "id": "tokenize",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Load tokenizer ---\n",
-    "BASE_MODEL = 'EleutherAI/gpt-neo-1.3B'  # change to your model\n",
-    "tokenizer = AutoTokenizer.from_pretrained(BASE_MODEL)\n",
-    "tokenizer.pad_token = tokenizer.eos_token"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "aed11141",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Tokenize dataset with padding ---\n",
+    "# --- Tokenization ---\n",
     "def tokenize_function(examples):\n",
-    "    return tokenizer(examples, padding='max_length', truncation=True, max_length=128)\n",
+    "    return tokenizer(examples['text'], truncation=True, padding='max_length', max_length=128)\n",
     "\n",
-    "tokenized = dataset.map(lambda x: tokenize_function(x['text']), batched=True)"
+    "tokenized = dataset.map(tokenize_function, batched=True)\n",
+    "tokenized.set_format(type='torch', columns=['input_ids', 'attention_mask'])"
    ]
   },
   {
    "cell_type": "code",
-   "id": "1e2dcada",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Load base model and prepare for LoRA (8-bit) ---\n",
-    "bnb_config = BitsAndBytesConfig(load_in_8bit=True)\n",
-    "\n",
-    "model = AutoModelForCausalLM.from_pretrained(\n",
-    "    BASE_MODEL,\n",
-    "    device_map='auto',\n",
-    "    quantization_config=bnb_config\n",
-    ")\n",
-    "\n",
-    "# Prepare model for int8 training (necessary for LoRA)\n",
-    "model = prepare_model_for_int8_training(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "399ce29a",
+   "execution_count": null,
+   "id": "lora-config",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,10 +75,10 @@
     "lora_config = LoraConfig(\n",
     "    r=16,\n",
     "    lora_alpha=32,\n",
-    "    target_modules=['q_proj','v_proj'],  # supported modules in GPTNeoAttention\n",
+    "    target_modules=['q_proj', 'v_proj'],\n",
     "    lora_dropout=0.05,\n",
     "    bias='none',\n",
-    "    task_type=TaskType.CAUSAL_LM\n",
+    "    task_type='CAUSAL_LM'\n",
     ")\n",
     "\n",
     "model = get_peft_model(model, lora_config)"
@@ -108,37 +86,29 @@
   },
   {
    "cell_type": "code",
-   "id": "d1463550",
+   "execution_count": null,
+   "id": "training-args",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Data collator ---\n",
-    "data_collator = DataCollatorForSeq2Seq(tokenizer, padding=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "ff84353c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Training arguments ---\n",
+    "# --- Training Arguments ---\n",
     "training_args = TrainingArguments(\n",
     "    output_dir='role-lora',\n",
     "    per_device_train_batch_size=2,\n",
     "    gradient_accumulation_steps=8,\n",
-    "    num_train_epochs=3,\n",
+    "    num_train_epochs=1,\n",
     "    learning_rate=2e-4,\n",
     "    fp16=True,\n",
     "    logging_steps=10,\n",
     "    save_strategy='epoch',\n",
-    "    report_to='none'  # disables WandB logging\n",
+    "    report_to='none'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "id": "0dd4e5f8",
+   "execution_count": null,
+   "id": "trainer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,19 +116,31 @@
     "trainer = Trainer(\n",
     "    model=model,\n",
     "    args=training_args,\n",
-    "    train_dataset=tokenized,\n",
-    "    data_collator=data_collator\n",
+    "    train_dataset=tokenized\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "id": "a273c902",
+   "execution_count": null,
+   "id": "train-model",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Train model ---\n",
     "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "save-model",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Save model ---\n",
+    "model.save_pretrained('role-lora-final')\n",
+    "tokenizer.save_pretrained('role-lora-final')"
    ]
   }
  ],
