--- a/role_lora_pipeline.ipynb
+++ b/role_lora_pipeline.ipynb
@@ -32,10 +32,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Load base model ---\n",
+    "# --- Load base model and tokenizer ---\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "\n",
     "BASE_MODEL = 'EleutherAI/gpt-neo-125M'\n",
+    "\n",
     "tokenizer = AutoTokenizer.from_pretrained(BASE_MODEL)\n",
-    "model = AutoModelForCausalLM.from_pretrained(BASE_MODEL, device_map='auto')"
+    "# Fix padding issue for GPT-style models\n",
+    "if tokenizer.pad_token is None:\n",
+    "    tokenizer.pad_token = tokenizer.eos_token\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(BASE_MODEL, device_map='auto')\n"
    ]
   },
   {
@@ -58,10 +65,15 @@
    "source": [
     "# --- Tokenization ---\n",
     "def tokenize_function(examples):\n",
-    "    return tokenizer(examples['text'], truncation=True, padding='max_length', max_length=128)\n",
+    "    return tokenizer(\n",
+    "        examples['text'], \n",
+    "        truncation=True, \n",
+    "        padding='max_length',  # now safe, because pad_token is set\n",
+    "        max_length=128\n",
+    "    )\n",
     "\n",
     "tokenized = dataset.map(tokenize_function, batched=True)\n",
-    "tokenized.set_format(type='torch', columns=['input_ids', 'attention_mask'])"
+    "tokenized.set_format(type='torch', columns=['input_ids', 'attention_mask'])\n"
    ]
   },
   {
@@ -91,44 +103,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Training Arguments ---\n",
+    "from transformers import Trainer, TrainingArguments\n",
+    "\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir='role-lora',\n",
+    "    output_dir=\"role-lora\",\n",
     "    per_device_train_batch_size=2,\n",
     "    gradient_accumulation_steps=8,\n",
-    "    num_train_epochs=1,\n",
+    "    num_train_epochs=3,\n",
     "    learning_rate=2e-4,\n",
     "    fp16=True,\n",
     "    logging_steps=10,\n",
-    "    save_strategy='epoch',\n",
-    "    report_to='none'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "trainer",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Initialize Trainer ---\n",
+    "    save_strategy=\"epoch\"\n",
+    ")\n",
+    "\n",
     "trainer = Trainer(\n",
     "    model=model,\n",
     "    args=training_args,\n",
     "    train_dataset=tokenized\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "train-model",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# --- Train model ---\n",
-    "trainer.train()"
+    ")\n",
+    "\n",
+    "trainer.train()\n"
    ]
   },
   {
