--- a/role_lora_pipeline.ipynb
+++ b/role_lora_pipeline.ipynb
@@ -113,7 +113,8 @@
     "    learning_rate=2e-4,\n",
     "    fp16=True,\n",
     "    logging_steps=10,\n",
-    "    save_strategy=\"epoch\"\n",
+    "    save_strategy=\"epoch\",\n",
+    "    report_to=[]  # <<< disables wandb/other loggers\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
