--- a/role_lora_pipeline.ipynb
+++ b/role_lora_pipeline.ipynb
@@ -63,17 +63,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- Tokenization ---\n",
+    "# --- Tokenization with labels ---\n",
     "def tokenize_function(examples):\n",
-    "    return tokenizer(\n",
-    "        examples['text'], \n",
-    "        truncation=True, \n",
-    "        padding='max_length',  # now safe, because pad_token is set\n",
+    "    tokens = tokenizer(\n",
+    "        examples['text'],\n",
+    "        truncation=True,\n",
+    "        padding='max_length',\n",
     "        max_length=128\n",
     "    )\n",
+    "    tokens[\"labels\"] = tokens[\"input_ids\"].copy()  # labels = input_ids for causal LM\n",
+    "    return tokens\n",
     "\n",
     "tokenized = dataset.map(tokenize_function, batched=True)\n",
-    "tokenized.set_format(type='torch', columns=['input_ids', 'attention_mask'])\n"
+    "tokenized.set_format(type='torch', columns=['input_ids', 'attention_mask', 'labels'])\n"
    ]
   },
   {
@@ -114,7 +116,7 @@
     "    fp16=True,\n",
     "    logging_steps=10,\n",
     "    save_strategy=\"epoch\",\n",
-    "    report_to=[]  # <<< disables wandb/other loggers\n",
+    "    report_to=[]  # disable wandb\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
